public/css/tooltip.css
/* .show{
    border:1px solid red;
}
.blow{
    border:1px solid blue;
}
.flow{
    border:1px solid green;

}
.slow{
    border: 1px solid blue !important;
} */



body{
    background-color:rgba(255,255,255);
    /* overflow-y:hidden; */
    --plyr-color-main:#156d74;
}


.mic{
    margin-top:25%;
}
.play_arrow{
    margin-top: 30%;
    height: 24px;

    height: 20px;
    margin-left: 12px;
}
.pause{
    margin-left: 12px;
    margin-top: 16px;
    height: 26px;
    display:none !important;

    margin-left: 9px;
    margin-top: 13px;
    height: 23px;
}
mark{
    background-color: #72c157;
    border-radius: 8px;
        
}
.highlight{
    background-color: #8cdce2;
    border-radius: 8px;
}
#story{
    line-height:1.5em;
    /* font-family: 'Roboto', sans-serif; */
    font-family: 'Quicksand', sans-serif;
    font-size:20px;
    
}
.book-title-small{
    font-family: 'Roboto', sans-serif;
    font-size: 28px;
    right: 0;
    opacity:0;
    /* display: none; */
    transform: translateY(-26px);
    font-weight: 700;
    text-decoration: underline;
}
.book-title{
    font-size:50px;
}
.annotate{
    font-family: 'Roboto', sans-serif;
    font-size:20px;
    /* text-decoration:underline; */
    /* font-style: italic; */
    color:rgb(56, 54, 54);
    /* text-decoration-line: underline; */
    font-weight:700;
    cursor:pointer;
}

p {
    margin-bottom:1.5em
}
#chapter_title{
    text-align: center;
    font-size:30px;
    font-family: 'Roboto', sans-serif;
}
.story_holder{

    /* height:300px; */

    height:100%;
    /* overflow-x:hidden; */
    /* overflow-y:scroll; */
    transition:all 1s ease;
}
.audio{
    font-weight:800;
    color: rgb(85, 151, 182);
}
.audio:hover{
    cursor:pointer;

}
.tooltip-inner.big{
    background-color: rgb(220,64,53) !important;
}
.tooltip-inner {
    max-width: 200px;
    padding: 3px 8px;
    color: #fff;
    text-align: center;
    font-size:18px;
    background-color: rgb(85, 151, 182);
    background-color:#156d74;
    border-radius: .25rem;
    opacity:1;
}
.tooltip.bs-tooltip-top .arrow:before {
    display:none;
}
.tooltip.bs-tooltip-bottom .arrow:before {
    color:rgb(85, 151, 182) !important;
}
.tooltip{opacity:1!important;}
.buy{
    cursor:pointer;
}
.plyr{
    display:none !important;
    width:100% !important;
    /* max-width:100% !important; */
}
.result_holder {
    background-color: #f2f1eb;
    border-radius: 15px;
    padding-left: 24px;
    padding-right: 24px;
    padding-top: 5px;
    padding-bottom: 5px;
    height: 100px;
    overflow-y: scroll;
    position:relative;
}
.scroll_div{
    width:100%;
}
#move{
    transition: all ease 0.5s;
    overflow-y:scroll;
    height: 222px;

    height: 252px;
}
.logo{
    height:90px;
    max-width:100%;
    object-fit:scale-down;
    right:0;
}
.cart{
    transition: all ease 0.5s;
    transform:translateY(0px);
}
.cart:hover{
    transform:translateY(-10px);
    transition: all ease 0.5s;
    cursor:pointer;
}
.buytooltip:hover{
    cursor:pointer;
}
a, a:hover, a:focus, a:active {
    text-decoration: none;
    color: inherit;
}

.playbutton{
    background: #156d74;
    border-radius: 50%;
    cursor:pointer;

    width: 60px;
    height: 60px;
    

    width:50px;
    height:50px;
}
.microw{
    padding-top:35px;
}


.mytooltip{
    transform:translateY(15px);
    object-fit:scale-down;
}

.skippedwordsholder{
    height: 158px;
    /* width:100px; */
    /* position:relative; */
}
.skippedwords{
    /* border: 1px solid green; */
    width: 70%;
    height: 158px;
    background-color:lightblue;
    border-radius:10px;
    display:none;
}

ul {
    list-style-type: none;
  }

.leftrewind{
    margin-right: 10px;
    margin-top: 20px;
    cursor: pointer;
    height: 18px;

    height:14px;
}

.rightrewind{
    margin-left: 10px;
    margin-top: 20px;
    cursor: pointer;
    height: 18px;

    height:14px;
}





.desktop{
    display:none !important;
}
.desktoptitle{
    color: #156d74;
    padding-top:18px;
}

.mobiletitle{
    color: #156d74;
    padding-top:5px;
    padding-bottom: 28px;
}
.movemobile{
    padding-top:0px !important;
    padding-left:10px !important;
    padding-right:10px !important;
}

.booktitle{
    font-size:27px;


    text-decoration: underline;
    font-family: 'Quicksand', sans-serif;
    font-weight:800;
    font-size:20px;
    
}
.buybutton {
    width: 288px;
    height: 27px;
    background-color: #8cdce2;
    border-radius: 5px;
}
.buytext{
    font-size: 16px;
    margin-left: 10px;
    margin-top: 3px !important;
}
.buytext-mobile{
    font-size: 10px;
    text-align: center;
}
.mobilemic{
    /* transform: translateY(14px); */
    transform: translateY(16px);
    height: 27px;

    transform: translateY(14px);
    height: 22px;
}
.circle{
    background: lightblue;
    background: rgb(220,64,53);
    background: #156d74;
    border-radius: 50%;
    cursor:pointer;
    width:60px;
    height:60px;

    width:50px;
    height:50px;
}
.skipword{
    transform: translateY(0px);
    font-size:14px;
    background-color: #8cdce2;
    border: 0px;
    border-radius: 5px;
    outline: none !important;
}

.buttontexts{
    font-size:16px;
}

.ecoute{
    transform: translateX(23px);
}


@media only screen and (min-width: 420px) {
    #move{
        overflow-y:hidden;
    }
}
@media only screen and (min-width: 518px) {
    
    .playrow{
        padding-right: 25% !important;
    }
}
@media only screen and (min-width: 659px) {
    
    .playrow{
        padding-right: 50% !important;
    }
}

/* ipad mini portrait */
@media (min-width: 768px) and (max-width: 1024px) and (orientation: portrait) {
  
    body{
        background-color:rgba(108, 177, 108, 0.493);
    }
    .playbutton {
        
        width: 60px;
        height: 60px;
      
    }
    .play_arrow {
        margin-top: 30%;
        height: 24px;
        margin-left: 16px;
    }
    .playrow {
        padding-right: 100px !important;
    }
    .leftrewind {
   
        height: 19px;
    }
    .rightrewind{
        height: 19px;
    }
    .ecoute {
        transform: translateX(28px);
        font-size: 20px;
    }
    .pause{
        margin-left: 12px;
        margin-top: 16px;
        height: 27px;
    }
    .circle{
        width: 60px;
        height: 60px
    }
    .mobilemic{
        transform: translateY(16px);
        height: 26px;
    }
    .buttontexts {
        font-size: 20px;
    }
    
  }
  

/* if window GREATER than 600px (RECENTLY CHANGED) */
@media only screen and (min-width: 600px) {
    /* body {
      background-color: lightblue;
    }

    .pause{
        margin-left: 14px !important;
        margin-top: 16px !important;
        height:50% !important;
    }
    
    
    .mobile{
        display:none !important;
    }
    .desktop{
        display:flex !important;
    }
    .circle {
    
        width: 70px;
        height: 70px;
        
    }
    .play_arrow{
        margin-top: 27% !important;
        height: 45% !important;
    }
    .playbutton{
        width: 70px;
        height: 70px;
    }
    .skipword{
        transform:translateY(-130px);
        
    }
    .booktitle {
        margin-left: 96px;
        font-size:43px;
    }

    .rightrewind{
        margin-left: 20px;
        margin-top: 20px;
        height:25px !important;
    }
    .leftrewind{
        margin-right: 20px;
        margin-top: 20px;
        height:25px !important;

    } */

  } 

  @media only screen and (min-height: 568px) {
    #move{
        height: 268px;
    }
  }
  @media only screen and (min-height: 616px) {
    #move{
        height: 316px;
    }
  }
  @media only screen and (min-height: 667px) {
    #move{
        height:366px;
    }
  }
  @media only screen and (min-height: 731px) {
    #move{
        height: 428px;
    }
  }
  @media only screen and (min-height: 805px) {
    #move{
        height: 504px;
    }
  }
  @media only screen and (min-height: 812px) {
    #move{
        height: 509px;
    }
  }

  @media only screen and (min-width: 1024px) {
      /* body {
      background-color: rgb(231, 183, 79);
    } */
    .booktitle{
        font-size:27px;
    }
    .rowplay{
        transform: translateX(-16px);
    }
    .rowmic{
        transform: translateX(17px);
    }
    
    
    
    .mobile{
        display:none !important;
    }
    .desktop{
        display:flex !important;
    }
    .circle {
        width: 60px;
        height: 60px;
    }
    .mic {
        margin-top: 28%;
        height:27px;
    }
    .play_arrow {
        margin-top: 30% !important;
        height: 39% !important;
    }
    .playbutton {
        width: 60px;
        height: 60px;
    }
    .skipword{
        transform:translateY(-130px);
        
    }
    .booktitle {
        /* margin-left: 96px;
        font-size:43px; */
        /* font-size: 61px; */
    }

    .rightrewind{
        margin-left: 20px;
        margin-top: 20px;
        height:21px !important;
    }
    .leftrewind{
        margin-right: 20px;
        margin-top: 20px;
        height:21px !important;

    }
    .pause {
        margin-left: 13px !important;
        margin-top: 16px !important;
        height: 43% !important;
    }
    .result_holder{
        margin-left: 15px !important;
        margin-right: 15px !important;
    }
    .tooltip-right{
        transform: translateX(-17px) translateY(15px) !important;
    }
    .tooltip-left{
        transform: translateX(16px) translateY(15px) !important;
    }
  }

  /* DESKTOP MODE */
@media only screen and (min-width: 1200px) {
    /* body {
      background-color: rgb(105, 240, 172);
    } */

    .booktitle{
        font-size:27px;
    }
    .pause{
        margin-left: 14px !important;
        margin-top: 16px !important;
        height:50% !important;
    }
    .mic {
        height:50%;
        margin-top:25%;
    }
    
    
    .mobile{
        display:none !important;
    }
    .desktop{
        display:flex !important;
    }
    .circle {
    
        width: 70px;
        height: 70px;
        
    }
    .play_arrow{
        margin-top: 27% !important;
        height: 45% !important;
    }
    .playbutton{
        width: 70px;
        height: 70px;
    }
    .skipword{
        transform:translateY(-130px);
        
    }
    .booktitle {
        /* margin-left: 96px;
        font-size:43px; */
        /* font-size: 61px; */
    }

    .rightrewind{
        margin-left: 20px;
        margin-top: 20px;
        height:25px !important;
    }
    .leftrewind{
        margin-right: 20px;
        margin-top: 20px;
        height:25px !important;

    }

    /* height media queries within desktop mode */
    @media only screen and (min-height: 900px) {
        #move{
            height:564px;
        }
    }
    @media only screen and (min-height: 1080px) {
        #move{
            height:734px;
        }
    }
    @media only screen and (min-height: 1440px) {
        #move{
            height:1084px;
        }
    }
    
    

  }

  html {
    visibility: visible;
    opacity: 1;
}

